refactor(order): use OrderCriterion and OrderKeyCache refactor the order methods in Enumerable